# DisorderFormat

DiffuseData/: README.md
DiffuseData/Example/: example.h5  k_plot.mac
DiffuseData/Fortran/: AAA.README  CMakeLists.txt  hdf5_read.f90  hdf_write.f90  main_write.f90  prompt_mod.f90  top_data_mod.f90
DiffuseStructure/: AAA.README  README
DiffuseStructure/Code/: AAA_README  CMakeLists.txt  unified_top_read.f90  unified_top_write.f90
DiffuseStructure/Code/lib_f90/: CMakeLists.txt  error_mod.f90
DiffuseStructure/DISCUS/: simple_cubic.mac  simple_trigonal.mac
DiffuseStructure/Python/: rbn_nexus_structure.py  test_read_python.py  test_write_top.py
